Contrast color for .shout links. Fixes #6

--- a/styles/screen.scss
+++ b/styles/screen.scss
@@ -286,6 +286,10 @@ a {
 			color:#FFF;
 			font-size:100px;
 			transform:translateY(-50%);
+			a {
+				border-bottom:none;
+				color:#FFF;
+				}
 			}
 		}
 	// Place
